--- a/web/index.html
+++ b/web/index.html
@@ -1,21 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!--
-      If you are serving your web app in a path other than the root, change the
-      href value below to reflect the base path you are serving from.
-
-      The path provided below has to start and end with a slash "/" in order for
-      it to work correctly.
-
-      For more details:
-      * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-      This is a placeholder for base href that will be replaced by the value of
-      the `--base-href` argument provided to `flutter build`.
-    -->
     <base href="$FLUTTER_BASE_HREF">
-
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="description" content="A new Flutter project.">
@@ -33,11 +19,13 @@
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
-<script src="flutter_bootstrap.js" async></script>
+
+<!-- Blockly core & blocks & messages -->
 <script src="https://unpkg.com/blockly/blockly.min.js" defer></script>
 <script src="https://unpkg.com/blockly/blocks_compressed.js" defer></script>
 <script src="https://unpkg.com/blockly/msg/en.js" defer></script>
-<!-- 필요하면 ko.js로 교체 -->
+<!-- 필요시 한국어: <script src="https://unpkg.com/blockly/msg/ko.js" defer></script> -->
+
 <!-- 선택: 코드 생성기 -->
 <script src="https://unpkg.com/blockly/javascript_compressed.js" defer></script>
 <script src="https://unpkg.com/blockly/python_compressed.js" defer></script>
@@ -45,6 +33,125 @@
 <script src="https://unpkg.com/blockly/lua_compressed.js" defer></script>
 <script src="https://unpkg.com/blockly/php_compressed.js" defer></script>
 
+<!-- ✅ 커스텀 prompt/confirm/alert 오버라이드 -->
+<script id="blockly-dialog-override">
+    (function () {
+      function showPromptModal(message, defaultValue, onDone) {
+        // 배경 오버레이
+        const overlay = document.createElement('div');
+        overlay.style.position = 'fixed';
+        overlay.style.inset = '0';
+        overlay.style.background = 'rgba(0,0,0,.35)';
+        overlay.style.zIndex = 9998;
 
+        // 모달(요청하신 디자인 적용)
+        const modal = document.createElement('div');
+        modal.style.position = 'fixed';
+        modal.style.top = '50%';
+        modal.style.left = '50%';
+        modal.style.transform = 'translate(-50%, -50%)';
+        modal.style.backgroundColor = '#fff';
+        modal.style.border = '2px solid #5C81A6';
+        modal.style.borderRadius = '10px';
+        modal.style.padding = '20px';
+        modal.style.zIndex = 9999;
+        modal.style.boxShadow = '0 4px 12px rgba(0,0,0,0.2)';
+        modal.style.fontFamily = 'Arial, sans-serif';
+        modal.style.minWidth = '320px';
+        modal.style.maxWidth = '90vw';
+
+        const label = document.createElement('div');
+        label.textContent = message || '';
+        label.style.marginBottom = '10px';
+
+        const input = document.createElement('input');
+        input.value = defaultValue || '';
+        input.style.width = '100%';
+        input.style.padding = '10px';
+        input.style.marginBottom = '12px';
+        input.style.border = '1px solid #ccc';
+        input.style.borderRadius = '6px';
+        input.style.fontSize = '16px';
+
+        const btnRow = document.createElement('div');
+        btnRow.style.display = 'flex';
+        btnRow.style.gap = '8px';
+        btnRow.style.justifyContent = 'flex-end';
+
+        const okButton = document.createElement('button');
+        okButton.textContent = '확인';
+        okButton.style.padding = '8px 14px';
+        okButton.style.backgroundColor = '#5C81A6';
+        okButton.style.color = '#fff';
+        okButton.style.border = 'none';
+        okButton.style.borderRadius = '6px';
+        okButton.style.cursor = 'pointer';
+
+        const cancelButton = document.createElement('button');
+        cancelButton.textContent = '취소';
+        cancelButton.style.padding = '8px 14px';
+        cancelButton.style.backgroundColor = '#ccc';
+        cancelButton.style.border = 'none';
+        cancelButton.style.borderRadius = '6px';
+        cancelButton.style.cursor = 'pointer';
+
+        function cleanupAndReturn(val) {
+          try { document.body.removeChild(modal); } catch {}
+          try { document.body.removeChild(overlay); } catch {}
+          onDone(val);
+        }
+
+        okButton.onclick = () => cleanupAndReturn(String(input.value));
+        cancelButton.onclick = () => cleanupAndReturn(null);
+        overlay.onclick = () => cleanupAndReturn(null); // 오버레이 클릭 시 취소
+
+        // 키보드: Enter=확인, Esc=취소
+        modal.addEventListener('keydown', (e) => {
+          if (e.key === 'Enter') { e.preventDefault(); okButton.click(); }
+          if (e.key === 'Escape') { e.preventDefault(); cancelButton.click(); }
+        });
+
+        btnRow.appendChild(cancelButton);
+        btnRow.appendChild(okButton);
+        modal.appendChild(label);
+        modal.appendChild(input);
+        modal.appendChild(btnRow);
+
+        document.body.appendChild(overlay);
+        document.body.appendChild(modal);
+        input.focus();
+        input.select();
+      }
+
+      function installBlocklyDialogs() {
+        if (!window.Blockly || !Blockly.dialog) return false;
+        // prompt
+        Blockly.dialog.setPrompt(function (message, defaultValue, callback) {
+          showPromptModal(message, defaultValue, callback);
+        });
+        // confirm (간단히 기본 confirm 사용; 필요 시 커스텀 모달로 교체 가능)
+        Blockly.dialog.setConfirm(function (message, callback) {
+          const ok = window.confirm(message || '');
+          callback(!!ok);
+        });
+        // alert
+        Blockly.dialog.setAlert(function (message, opt_callback) {
+          window.alert(message || '');
+          if (opt_callback) opt_callback();
+        });
+        return true;
+      }
+
+      // Blockly가 로드될 때까지 대기 후 설치
+      (function wait() {
+        if (!installBlocklyDialogs()) {
+          setTimeout(wait, 0);
+        }
+      })();
+    })();
+</script>
+
+<!-- Flutter bootstrap: 가능한 한 마지막에 두세요 -->
+<script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
